fixed events layout issue

--- a/src/app/(pages)/events/index.module.scss
+++ b/src/app/(pages)/events/index.module.scss
@@ -2,41 +2,23 @@
 
 .container {
     position: relative;
-    width: 100%;
-    max-width: 1540px;
-    min-height: 65vh;
-    margin: auto;
+    height: 100%;
+    padding: 3rem 7rem;
 
-
-    .flyerText {
-        position: absolute;
-        top: 0;
-        left: 50%;
-        transform: translateX(-50%);
-
-        h2 {
-            font-size: 47px;
-            text-transform: uppercase;
-            font-weight: 400;
-            white-space: nowrap;
-        }
-    }
     .flyerWrapper {
+        height: 100%;
+        width: 100%;
         display: grid;
         gap: 2rem;
         grid-template-columns: repeat(2, 1fr);
         
         .flyer {
-            position: relative;
-            aspect-ratio: 1 / 1;
-
-            
-            img {
-                border-radius: 5px;
-                object-fit: cover;
-            }
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
-        @include small-break {
+        
+        @include mid-break {
             grid-template-columns: repeat(1, 1fr);
         }
     }
