--- a/src/app/_components/Categories/index.module.scss
+++ b/src/app/_components/Categories/index.module.scss
@@ -72,6 +72,6 @@
   }
   
   @include extra-small-break {
-    padding: 0 .5rem;
+    padding: 0 .5rem 4rem .5rem;
   }
 }
