--- a/src/app/_components/MailingList/index.module.scss
+++ b/src/app/_components/MailingList/index.module.scss
@@ -68,16 +68,16 @@
             } 
             
             @include small-break {
-              font-size: 18px;
-              font-weight: normal;
+              font-size: 14px;
+              font-weight: 300;
             } 
             
           }
           @include small-break {
             list-style: none;
             text-wrap: stable;
-            padding: 1rem 2rem 0 2rem;
-            line-height: 1.2;
+            padding: 1rem;
+            line-height: 1.1;
           }
         }
       }
@@ -100,11 +100,15 @@
       font-size: 1.5rem;
       border-radius: 3px;
       }
+
+      @include mid-break {
+        padding: 1rem 0;
+      }
     }
 
     @include mid-break {
       flex-direction: column;
-      height: 45vh;
+      min-height: 60vh;
     }
 
   }
